# has-type-class-pattern

./: README.md  has-type-class-pattern.cabal
src/: CollectImages.hs  TraverseImages.hs  Types.hs  Uniplate.hs
